@@ -1992,3 +1992,47 @@
              (setq result (nconc result (thing-fringe scratchpad)))))
          result))
      (() nil))))
+
+(with-test (:name :dynamic-extent-setq-let)
+  (let ((sb-c::*check-consistency* t))
+    (checked-compile-and-assert
+     ()
+     '(lambda (x)
+       (dotimes (i 2)
+         (let ((y (cons x x)))
+           (declare (dynamic-extent y))
+           (assert (sb-ext:stack-allocated-p y))
+           (setq y (list x x x))
+           (assert (equal y (list x x x)))
+           (assert (sb-ext:stack-allocated-p y))
+           (setq y (make-array 20 :initial-element nil))
+           (assert (equalp y (make-array 20 :initial-element nil)))
+           (assert (sb-ext:stack-allocated-p y))
+           (setq y (list (cons x i) (cons x i)))
+           (assert (tree-equal y (list (cons x i) (cons x i))))
+           (assert (sb-ext:stack-allocated-p y))
+           (assert (sb-ext:stack-allocated-p (first y) (second y))))))
+     ((6) nil))))
+
+(with-test (:name :dynamic-extent-setq-local-calls)
+  (let ((sb-c::*check-consistency* t))
+    (checked-compile-and-assert
+     ()
+     '(lambda (x y)
+       (labels ((f (a b)
+                  (declare (dynamic-extent a b))
+                  (setq a (cons x y))
+                  (assert (sb-ext:stack-allocated-p a))
+                  (setq b (vector x y))
+                  (assert (sb-ext:stack-allocated-p b))
+                  (assert (equal a (cons x y)))
+                  (assert (equalp b (vector x y)))))
+         (dotimes (i 4)
+           (cond (x
+                  (f nil nil)
+                  (print-nothing x))
+                 (t
+                  (f t t)
+                  (print-nothing y))))))
+     ((nil 2) nil)
+     ((t 2) nil))))
